hphp/hack/test/typecheck/new_inference/eager_solve/lambda1.php.like_types.exp
File "lambda1.php", line 48, characters 55-63:
Invalid argument (Typing[4323])
File "lambda1.php", line 32, characters 37-38:
Some type constraint(s) are violated here
File "lambda1.php", line 32, characters 37-38:
Tv is a constrained type parameter
File "lambda1.php", line 12, characters 3-18:
Expected Traversable<[unresolved]>
File "lambda1.php", line 32, characters 37-38:
But got dynamic
